--- a/css/sass/base/_home.scss
+++ b/css/sass/base/_home.scss
@@ -229,19 +229,18 @@ header {
 .collaborate {
     color: #222222;
     @include box-shadow(0 4px 0 rgba(0,0,0,.05));
-    padding-bottom: 100px;
 
     .title-collaborate {
       opacity: 0;
     }
 
     h1 {
-        padding-bottom: 60px;
-        padding-top: 50px;
+        padding-bottom: 40px;
+        padding-top: 40px;
     }
 
     p {
-        font-size: 24px;
+        font-size: 17px;
         font-weight: 500;
         padding-bottom: 40px;
     }
